Cleaned up project, reordered/changed various aspects
Updates depreceated items to more supported variants, added JavaDoc,